# CMAKE_hellow

./: .gitignore  README.md
C++17/: CMakeLists.txt
C++17/src/: CMakeLists.txt
C++17_Aproject/: CMakeLists.txt
C++17_Aproject/app/: CMakeLists.txt  main.cpp
C++17_Aproject/include/: CMakeLists.txt  Hellow.hpp
C++17_Aproject/src/: CMakeLists.txt  Hellow.cpp
C++17_EIGEN/: CMakeLists.txt
C++17_EIGEN/app/: main.cpp
C++17_EIGEN/include/: CMakeLists.txt  print_matrix.hpp
C++17_EIGEN/src/: CMakeLists.txt  print_matrix.cpp
C++17_HDF5/: CMakeLists.txt
C++17_HDF5/app/: main.cpp
C++17_MPI/: CMakeLists.txt
C++17_MPI/app/: main.cpp
c++17_OpenMP/: CMakeLists.txt  build.sh  main.cpp
